--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 	<head>
 	</head>
 	<body>
-		<h2>lectures</h2>
+		<h1>Introdução a Qt/C++</h1>
+		<h2>Construindo um Search Engine</h2>
+		<h3>lectures</h3>
 		<ul>
-			<li><a href="lectures/2/index.html">2</a></li>
+			<li><a href="lectures/2/index.html">Módulo 1: Boas vindas e Introdução a Qt</a></li>
+			<li><a href="lectures/3/index.html">Módulo 2: ...</a></li>
 		</ul>
 	</body>
 </html>
