--- a/lectures/3/index.html
+++ b/lectures/3/index.html
@@ -26,12 +26,6 @@ URL: https://code.google.com/p/io-2012-slides
 
 <slides class="layout-widescreen">
 
-  <slide class="logoslide nobackground">
-    <article class="flexbox vcenter">
-      <span><img src="images/chocolate_logo_128.png"></span>
-    </article>
-  </slide>
-
   <slide>
     <hgroup>
     </hgroup>
@@ -40,11 +34,11 @@ URL: https://code.google.com/p/io-2012-slides
     </br> </br> </br> </br>
     </br> </br> </br> </br>
     </br> </br> </br>
-    <p style="font-size: 50%;">Copyright &copy; 2013 Chocolate Software Labs.</br>
+    <p style="font-size: 50%;">Copyright &copy; 2020 quartix.io.</br>
     Todos os direitos reservados.</br></br>
     Nenhuma parte deste website ou de quaisquer de seus conteúdos podem ser
     reproduzidos, copiados, compartilhados em redes sociais, modificados ou
-    adaptados, sem consentimento expresso prévio de Chocolate Software Labs ou
+    adaptados, sem consentimento expresso prévio de quartix.io ou
     seus representantes legais.
     </p>
     </article>
@@ -308,12 +302,6 @@ crawlWeb(QUrl seed) {
     <p class="auto-fadein" data-config-contact>
       <!-- populated from slide_config.json -->
     </p>
-  </slide>
-
-  <slide class="logoslide dark nobackground">
-    <article class="flexbox vcenter">
-      <span><img src="images/chocolate_logo_128.png"></span>
-    </article>
   </slide>
 
   <slide hidden class="backdrop"></slide>
