Improve index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<body>
 		<h1>Introdução a Qt/C++</h1>
 		<h2>Construindo um Search Engine</h2>
-		<h3>lectures</h3>
+		<h3>Módulos / slides</h3>
 		<ul>
 			<li><a href="lectures/2/index.html">Módulo 1: Boas vindas e Introdução a Qt</a></li>
-			<li><a href="lectures/3/index.html">Módulo 2: ...</a></li>
+			<li><a href="lectures/3/index.html">Módulo 2: Classes núcleo e framework de testes QtTest</a></li>
 		</ul>
 	</body>
 </html>
